Homework/12/5/k8s_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
    - host: makarov.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-front
                port:
                  name: http
          - path: /api
            pathType: Exact
            backend:
              service:
                name: svc-back
                port:
                  name: http
